--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ki-Gastey-controle",
-  "short_name": "Ki-Gastey",
+  "name": "Kigastey-controle",
+  "short_name": "Kigastey",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
@@ -8,12 +8,13 @@
   "theme_color": "#5b2cff",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/icon-192.png",
+
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
